feat: add subreddit selection function